--- a/web/views/chat.ejs
+++ b/web/views/chat.ejs
@@ -7,58 +7,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 	<meta name='viewport' content='width=device-width, initial-scale=1'></meta>
 	<link rel="stylesheet" href="/css/search.css">
+	<script src="/js/search.js"></script>
 </head>
-<style>
-    html, body {
-        height: 100%;
-    }
-
-    .form-signin {
-        width: 100%;
-        max-width: 330px;
-        padding: 15px;
-        margin: 0 auto;
-    }
-
-    .form-signin .form-control {
-        position: relative;
-        box-sizing: border-box;
-        height: auto;
-        padding: 10px;
-        font-size: 16px;
-    }
-
-    body {
-        display: -ms-flexbox;
-        display: -webkit-box;
-        display: flex;
-        -ms-flex-align: center;
-        -ms-flex-pack: center;
-        -webkit-box-align: center;
-        align-items: center;
-        -webkit-box-pack: center;
-        justify-content: center;
-        padding-top: 40px;
-        padding-bottom: 40px;
-        background-color: #f5f5f5;
-    }
-
-    .form-signin input[type="text"] {
-        margin-bottom: -1px;
-        border-bottom-right-radius: 0;
-        border-bottom-left-radius: 0;
-    }
-    
-    .form-signin input[type="password"] {
-        margin-bottom: 10px;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-    }
-    
-    table, th, td {
-		border:1px solid black;
-	}
-</style>
 
 <script>
 	var chat_id = window.location.href.split('id=')[1];
@@ -110,7 +60,7 @@
 		});
 	});
 </script>
-<body class="text-center">
+<body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="/homepage">PennBook</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -138,29 +88,31 @@
 			<a class="nav-link" href="/logout">Logout</a>
 		</div>
 	</nav>
-    
-    
-    <div>
-    	<ul id="messages">
-    		<!-- Display old messages -->
-    		<% messages.forEach(function (element, index, array) { %>
-		  		<li><%= element.content.S %></li>
-		  		<li><%= element.sender.S %></li>
-		  		<li><%= element.time_sent.S %></li>
-		  	<% }); %>
-    	</ul>
-    </div>
-    <form id="message-form">
-    	<div id="form-message">
-    		<input class="form-control" id="input" autocomplete="off" placeholder="type a message..."
-    		  onfocus="this.placeholder = ''" onblur="this.placeholder = 'type a message...'">
-    		<button type="button" id="send-btn" class="btn btn-light" onclick="return sendChat();"><i
-    			class="material-icons" style="font-size:26px;">send</i></button>
-    	</div>
-    </form>
-    <div id="username">
-    	<%= username %>
-    </div>
-    
+	<div class="container">
+		<div>
+			<ul id="messages">
+				<!-- Display old messages -->
+				<% messages.forEach(function (element, index, array) { %>
+					  <li><%= element.content.S %></li>
+					  <li><%= element.sender.S %></li>
+					  <li><%= element.time_sent.S %></li>
+				  <% }); %>
+			</ul>
+		</div>
+		<form id="message-form">
+			<div id="form-message">
+				<input class="form-control" id="input" autocomplete="off" placeholder="type a message..."
+				  onfocus="this.placeholder = ''" onblur="this.placeholder = 'type a message...'">
+				<button type="button" id="send-btn" class="btn btn-light" onclick="return sendChat();"><i
+					class="material-icons" style="font-size:26px;">send</i></button>
+			</div>
+		</form>
+		<div id="username">
+			<%= username %>
+		</div>
+	</div>
 </body>
+<script>
+	autocomplete(document.getElementById("user-search"));
+</script>
 </html>
