--- a/web/views/createChat.ejs
+++ b/web/views/createChat.ejs
@@ -7,119 +7,64 @@
 	<meta name='viewport' content='width=device-width, initial-scale=1'></meta>
 	<link rel="stylesheet" href="/css/search.css">
 </head>
-<style>
-    html, body {
-        height: 100%;
-    }
 
-    .form-createchat {
-        width: 100%;
-        max-width: 330px;
-        padding: 15px;
-        margin: 0 auto;
-    }
-
-    .form-createchat .form-control {
-        position: relative;
-        box-sizing: border-box;
-        height: auto;
-        padding: 10px;
-        font-size: 16px;
-    }
-
-    body {
-        display: -ms-flexbox;
-        display: -webkit-box;
-        display: flex;
-        -ms-flex-align: center;
-        -ms-flex-pack: center;
-        -webkit-box-align: center;
-        align-items: center;
-        -webkit-box-pack: center;
-        justify-content: center;
-        padding-top: 40px;
-        padding-bottom: 40px;
-        background-color: #f5f5f5;
-    }
-
-    .form-createchat input[type="text"] {
-        margin-bottom: -1px;
-        border-bottom-right-radius: 0;
-        border-bottom-left-radius: 0;
-    }
-    
-    .form-createchat input[type="password"] {
-        margin-bottom: 10px;
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-    }
-    
-    table, th, td {
-		border:1px solid black;
-	}
-</style>
-
-<body class="text-center">
+<body>
 	<!-- This is a simple example template with a form that has a single input field. 
 		   You'll need something similar for the login page -->
 		   
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="/homepage">PennBook</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-					<a class="nav-link" href="/homepage">Home <span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Link</a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="/createChat">Start Chat<span class="sr-only">(current)</span></a>
-				</li>
-			</ul>
-			<form class="form-inline my-2 my-lg-0" action="/search" method="post" autocomplete="off">
-				<span class="autocomplete">
-					<input id="user-search" class="form-control mr-sm-2" type="search" name="keyword" placeholder="Search people" aria-label="Search">
-				</span>
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-			</form>
-			<a class="nav-link" href="/profile">My Profile</a>
-			<a class="nav-link" href="/logout">Logout</a>
-		</div>
-	</nav>
+           <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="/homepage">PennBook</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/homepage">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link active" href="/createChat">Start Chat<span class="sr-only">(current)</span></a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0" action="/search" method="post" autocomplete="off">
+                    <span class="autocomplete">
+                        <input id="user-search" class="form-control mr-sm-2" type="search" name="keyword" placeholder="Search people" aria-label="Search">
+                    </span>
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+                <a class="nav-link" href="/profile">My Profile</a>
+                <a class="nav-link" href="/logout">Logout</a>
+            </div>
+        </nav>
+    <div class="container">
+        <form action="/makeChat" method="post" class="form">
+            <h3>Create a chat!</h3>
+            <label for="login" class="sr-only">User 1</label>
+            <input type="text" class="form-control" name="user_1" placeholder="Username 1" required autofocus>
+            <label for="password" class="sr-only">User 2</label>
+            <input type="text" class="form-control" name="user_2" placeholder="Username 2" required>
+            <input type="submit" class="btn btn-primary btn-block" value="Create">		
+            <% if (error == 1) { %>
+                <div class="alert alert-danger" style='margin-top:15px'>
+                  Please make sure all fields are filled.
+                </div>
+            <% } %>
+            <% if (error == 2) { %>
+                <div class="alert alert-danger" style='margin-top:15px'>
+                  Failed to write to database.
+                </div>
+            <% } %>
+        </form>
+        <br>
+        <h3>My Chats</h3>
+        <table style="width:100%">
+          <% user_chats.forEach(function (element, index, array) { %>
+              <tr>
+              <td><a href="/chats?id=<%= element.chat_id.S %>">Chat <%= index + 1 %></a></td>
+              </tr>
+          <% }); %>
+        </table>
+    </div>
     
-    <form action="/makeChat" method="post" class="form-createchat">
-        <h1>Form Chat</h1>
-        <label for="login" class="sr-only">User 1</label>
-        <input type="text" class="form-control" name="user_1" placeholder="Username 1" required autofocus>
-        <label for="password" class="sr-only">User 2</label>
-        <input type="text" class="form-control" name="user_2" placeholder="Username 2" required>
-        <input type="submit" class="btn btn-lg btn-primary btn-block" value="Create">		
-        <% if (error == 1) { %>
-            <div class="alert alert-danger" style='margin-top:15px'>
-              Please make sure all fields are filled.
-            </div>
-        <% } %>
-        <% if (error == 2) { %>
-            <div class="alert alert-danger" style='margin-top:15px'>
-              Failed to write to database.
-            </div>
-        <% } %>
-        <p>
-            Built by G36
-        </p> 
-    </form>
-    <br>
-    <table style="width:100%">
-  	<% user_chats.forEach(function (element, index, array) { %>
-  		<tr>
-  		<td><a href="/chats?id=<%= element.chat_id.S %>">Chat <%= index + 1 %></a></td>
-  		</tr>
-  	<% }); %>
-
-	</table>
 </body>
 </html>
