--- a/web/views/homepage.ejs
+++ b/web/views/homepage.ejs
@@ -8,7 +8,161 @@
 	<link rel="stylesheet" href="/css/search.css">
 	<script src="/js/search.js"></script>
 </head>
-
+<script>
+  var login = '<%= login %>';
+  var mostRecentPost;
+  
+  function makePostHelper(msg, login, timestamp, post_id) {
+      var message = document.createElement("li");
+      var message_temp = document.createElement("div");
+      message_temp.setAttribute("style", "margin: 1cm");
+      message_temp.setAttribute("id", "post-" + post_id);
+      var msg_content = document.createElement("div");
+      msg_content.setAttribute("class", "card");
+      msg_content.setAttribute("style", "width: 40rem");
+      var content = document.createElement("div");
+      content.setAttribute("class", "card-body");
+      var text = document.createElement("p");
+      text.setAttribute("class", "card-text");
+      text.innerText = msg;
+      var name = document.createElement("a");
+      name.setAttribute("href", "/profile/" + login);
+      name.setAttribute("class", "card-text");
+      name.setAttribute("id", "user");
+      name.innerText = login;
+      var time = document.createElement("p");
+      time.setAttribute("id", "timestamp");
+      time.setAttribute("class", "card-text");
+      time.innerText = timestamp;
+      content.appendChild(text);
+      content.appendChild(name);
+      content.appendChild(time);
+      var comment_box = document.createElement("div");
+      comment_box.setAttribute("class", "card");
+      comment_box.setAttribute("style", "width: 40rem");
+      var comment = document.createElement("textarea");
+      comment.setAttribute("id", "comment-message-" + post_id);
+      comment.setAttribute("name", "comment-message-" + post_id);
+      comment.setAttribute("rows", "1");
+      comment.setAttribute("cols", "50");
+      var button = document.createElement("button");
+      button.setAttribute("id", post_id);
+      button.setAttribute("name", post_id);
+      button.setAttribute("class", "btn btn-primary");
+      button.onclick = function() { makeComment(post_id) };
+      var btn_span = document.createElement("span");
+      btn_span.setAttribute("id", "comment-text");
+      btn_span.innerText = "Comment"
+      button.appendChild(btn_span);
+      comment_box.appendChild(comment);
+      comment_box.appendChild(button);
+      msg_content.appendChild(content);
+      msg_content.appendChild(comment_box);
+      var comment_list = document.createElement("ul");
+      comment_list.setAttribute("id", "comments-" + post_id);
+      comment_list.setAttribute("style", "list-style-type: none");
+      message_temp.appendChild(msg_content);
+      message_temp.appendChild(comment_list);
+      message.appendChild(message_temp);
+      $('#posts').prepend(message);
+  }
+    
+  function makePost() {
+    $.ajax({
+      type: "POST",
+      url: '/makePost',
+      data: {
+        login: login,
+        message: $('#post-message').val(),
+      },
+      success: function(data) {
+        if (data.result == 0) {
+            $('#post-warning').hide();
+            var post = data.data;
+            makePostHelper(post.message.S, post.login.S, post.timestamp.S, post.post_id.S);
+            mostRecentPost = post.timestamp.S;
+        } else if (data.result == 1) {
+            $('#post-warning').show();
+        } else {
+            $('#post-warning').hide();
+        }
+      }
+    });
+  }
+  
+  function makeCommentHelper(comment, post_id) {
+      const [user, ...message] = comment.split(', ');
+      var comment = document.createElement("li");
+      var comment_temp = document.createElement("div");
+      comment_temp.setAttribute("class", "card");
+      comment_temp.setAttribute("style", "width: 40rem");
+      var text = document.createElement("p");
+      text.setAttribute("class", "card-text");
+      text.innerText = message;
+      var name = document.createElement("a");
+      name.setAttribute("href", "/profile/" + user);
+      name.setAttribute("class", "card-text");
+      name.innerText = user;
+      comment_temp.appendChild(text);
+      comment_temp.appendChild(name);
+      comment.appendChild(comment_temp);
+      $('#comments-' + post_id).prepend(comment);
+  }
+  
+  function makeComment(post_id) {
+    $.ajax({
+      type: "POST",
+      url: '/makeComment',
+      data: {
+        post_user: $('#post-' + post_id).find('#user').text(),
+        post_id: post_id,
+        message: $('#comment-message-' + post_id).val(),
+      },
+      success: function(data) {
+        if (data.result == 0) {
+          makeCommentHelper(data.data, post_id);
+        }
+      }
+    });
+  }
+  
+  function refreshPosts() {
+    $.post('/getPosts', {login: login}, function(data) {
+        let posts = data.posts;
+        for (let i = posts.length - 1; i >= 0; i--) {
+            let post = posts[i];
+            if (mostRecentPost == null || mostRecentPost == "" || new Date(post.timestamp.S) - new Date(mostRecentPost) > 0) {
+                makePostHelper(post.message.S, post.login.S, post.timestamp.S, post.post_id.S);
+                if (i == 0) {
+                    mostRecentPost = post.timestamp.S;
+                }
+            }
+            if ($('ul#comments-' + post.post_id.S + ' li').length + 1 != post.comments.SS.length) {
+                let current_comments = $('ul#comments-' + post.post_id.S + ' li');
+                let comments = [];
+                current_comments.each(function(idx, li) {
+                    let elem = $(li);
+                    comments.push(elem.find('a').text() + ', ' + elem.find('p').text());
+                });
+                post.comments.SS.forEach(comment => {
+                    if (comment != 'default' && !comments.includes(comment)) {
+                        makeCommentHelper(comment, post.post_id.S);
+                    }
+                });
+            }
+        }
+    });
+  }
+  
+  $(document).ready(function() {
+    mostRecentPost = $('ul#posts li:first').find("#timestamp").text();
+    
+    refreshPosts();
+    setInterval(function() {
+      refreshPosts();
+    }, 10000);
+  });
+</script>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="/homepage">PennBook</a>
@@ -38,8 +192,58 @@
 		<h1>
 			Welcome to PennBook!
 		</h1>
-	</div>
-    
+    <div id="post-warning" class="alert alert-danger" style='margin:15px; display: none'>You can only post on your own or your friends' walls!</div>
+    <div>
+      <textarea class="form-control" id="post-message" name="post-message" rows="4" cols="50"></textarea>
+      <button id='post-button' class="btn btn-primary mt-1" onclick="makePost()">
+      <span id='post-text'>Post</span>
+      </button>
+    </div>
+    <% if (posts.length == 0) { %>
+      <h3>No posts!</h3>
+    <% } else { %>
+      <ul id="posts" style="list-style-type: none">
+      <% posts.forEach(post => { %>
+      <li>
+      <div id="post-<%= post.post_id.S %>" class="mt-4">
+        <div class="card col-md">
+          <div class="card-body">
+            <a id="user" href='/profile/<%= post.login.S %>' class="card-title h5"><%= post.login.S %></a>
+            <p class="card-text"><%= post.message.S %></p>
+            <p id="timestamp" class="card-text"><%= post.timestamp.S %></p>
+            <ul id="comments-<%= post.post_id.S %>" style="list-style-type: none" class="mb-2">
+              <% post.comments.SS.forEach(comment => { %>
+                <% if (comment != "default") { %>
+                <li>
+                  <div class="card col-sm">
+                    <% const [user, ...message] = comment.split(', '); %>
+                    <p class="card-text"><%= message %></p>
+                    <a href='/profile/<%= user %>' class="card-text"><%= user %></a>
+                  </div>
+                </li>
+                <% } %>
+              <% }); %>
+            </ul>
+            <form>
+              <div class="form-row">
+                <div class="col">
+                  <input type='text' class='form-control' id="comment-message-<%= post.post_id.S %>" name="comment-message-<%= post.post_id.S %>"></input>
+                </div>
+                <div class="col-2">
+                  <button id="<%= post.post_id.S %>" name="<%= post.post_id.S %>" class="btn btn-primary" onclick="makeComment(this.id)">
+                    <span id='comment-text'>Comment</span>
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+        </li>
+        <% }); %>
+        </ul>
+      <% } %>
+    </div>
+  </div>
 </body>
 <script>
 	autocomplete(document.getElementById("user-search"));
