Added friend notifs to homepage

--- a/web/views/profile.ejs
+++ b/web/views/profile.ejs
@@ -475,15 +475,13 @@
 							</form>
 						</div>
 					</div>
-					
-				</li>
+			  </div>
+		  </li>
 			<% }); %>
 			</ul>
 		<% } %>
 	</div>
-	
-    
-    
+
 </body>
 <script>
 	function setInterests() {
