--- a/web/views/homepage.ejs
+++ b/web/views/homepage.ejs
@@ -205,44 +205,55 @@
       <ul id="posts" style="list-style-type: none">
       <% posts.forEach(post => { %>
       <li>
-      <div id="post-<%= post.post_id.S %>" class="mt-4">
-        <div class="card col-md">
-          <div class="card-body">
-            <a id="user" href='/profile/<%= post.login.S %>' class="card-title h5"><%= post.login.S %></a>
-            <p class="card-text"><%= post.message.S %></p>
-            <p id="timestamp" class="card-text"><%= post.timestamp.S %></p>
-            <ul id="comments-<%= post.post_id.S %>" style="list-style-type: none" class="mb-2">
-              <% post.comments.SS.forEach(comment => { %>
-                <% if (comment != "default") { %>
-                <li>
-                  <div class="card col-sm">
-                    <% const [user, ...message] = comment.split(', '); %>
-                    <p class="card-text"><%= message %></p>
-                    <a href='/profile/<%= user %>' class="card-text"><%= user %></a>
+      <% if (post.post_id) { %>
+        <div id="post-<%= post.post_id.S %>" class="mt-4">
+          <div class="card col-md">
+            <div class="card-body">
+              <a id="user" href='/profile/<%= post.login.S %>' class="card-title h5"><%= post.login.S %></a>
+              <p class="card-text"><%= post.message.S %></p>
+              <p id="timestamp" class="card-text"><%= post.timestamp.S %></p>
+              <ul id="comments-<%= post.post_id.S %>" style="list-style-type: none" class="mb-2">
+                <% post.comments.SS.forEach(comment => { %>
+                  <% if (comment != "default") { %>
+                  <li>
+                    <div class="card col-sm">
+                      <% const [user, ...message] = comment.split(', '); %>
+                      <p class="card-text"><%= message %></p>
+                      <a href='/profile/<%= user %>' class="card-text"><%= user %></a>
+                    </div>
+                  </li>
+                  <% } %>
+                <% }); %>
+              </ul>
+              <form>
+                <div class="form-row">
+                  <div class="col">
+                    <input type='text' class='form-control' id="comment-message-<%= post.post_id.S %>" name="comment-message-<%= post.post_id.S %>"></input>
                   </div>
-                </li>
-                <% } %>
-              <% }); %>
-            </ul>
-            <form>
-              <div class="form-row">
-                <div class="col">
-                  <input type='text' class='form-control' id="comment-message-<%= post.post_id.S %>" name="comment-message-<%= post.post_id.S %>"></input>
+                  <div class="col-2">
+                    <button id="<%= post.post_id.S %>" name="<%= post.post_id.S %>" class="btn btn-primary" onclick="makeComment(this.id)">
+                      <span id='comment-text'>Comment</span>
+                    </button>
+                  </div>
                 </div>
-                <div class="col-2">
-                  <button id="<%= post.post_id.S %>" name="<%= post.post_id.S %>" class="btn btn-primary" onclick="makeComment(this.id)">
-                    <span id='comment-text'>Comment</span>
-                  </button>
-                </div>
-              </div>
-            </form>
+              </form>
+            </div>
           </div>
         </div>
-        </li>
-        <% }); %>
-        </ul>
+      <% } else { %>
+        <div id="friend-<%= post.friend_login.S %>" class="mt-4">
+          <div class="card col-md">
+            <div class="card-body">
+              <p class="card-text">You friended <a href='/profile/<%= post.friend_login.S %>'><%= post.friend_login.S %></a></p>
+              <p id="timestamp" class="card-text"><%= post.timestamp.S %></p>
+            </div>
+          </div>
+        </div>
       <% } %>
-    </div>
+      </li>
+      <% }); %>
+      </ul>
+    <% } %>
   </div>
 </body>
 <script>
