--- a/web/views/profile.ejs
+++ b/web/views/profile.ejs
@@ -309,6 +309,9 @@
 				<li class="nav-item ">
 					<a class="nav-link" href="/createChat">Start Chat<span class="sr-only">(current)</span></a>
 				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="/profile">My Profile<span class="sr-only">(current)</span></a>
+				</li>
 			</ul>
 			<form class="form-inline my-2 my-lg-0" action="/search" method="post" autocomplete="off">
 				<span class="autocomplete">
@@ -316,7 +319,6 @@
 				</span>
 				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 			</form>
-			<a class="nav-link" href="/profile">My Profile</a>
 			<a class="nav-link" href="/logout">Logout</a>
 		</div>
 	</nav>
