--- a/web/views/chat.ejs
+++ b/web/views/chat.ejs
@@ -68,14 +68,14 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
+				<li class="nav-item">
 					<a class="nav-link" href="/homepage">Home <span class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Link</a>
-				</li>
-				<li class="nav-item active">
+				<li class="nav-item ">
 					<a class="nav-link" href="/createChat">Start Chat<span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/profile">My Profile<span class="sr-only">(current)</span></a>
 				</li>
 			</ul>
 			<form class="form-inline my-2 my-lg-0" action="/search" method="post" autocomplete="off">
@@ -84,7 +84,6 @@
 				</span>
 				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 			</form>
-			<a class="nav-link" href="/profile">My Profile</a>
 			<a class="nav-link" href="/logout">Logout</a>
 		</div>
 	</nav>
