--- a/web/views/profile.ejs
+++ b/web/views/profile.ejs
@@ -144,7 +144,7 @@
       var time = document.createElement("p");
       time.setAttribute("id", "timestamp");
       time.setAttribute("class", "card-text");
-      time.innerText = timestamp;
+      time.innerText = new Date(timestamp).toUTCString();
       content.appendChild(text);
       content.appendChild(name);
       content.appendChild(time);
@@ -285,9 +285,6 @@
 		  refreshPosts();
 	  }, 10000);
   });
-
-	
-
 </script>
 <% const categories = ["Crime", "Entertainment", "World News", "Impact", "Politics", "Weird News", "Black Voices",
 "Women", "Comedy", "Queer Voices", "Sports", "Business", "Travel", "Media", "Tech", "Religion",
@@ -449,7 +446,7 @@
 						<div class="card-body">
 							<a id="user" href='/profile/<%= post.login.S %>' class="card-title h5"><%= post.login.S %></a>
 							<p class="card-text"><%= post.message.S %></p>
-							<p id="timestamp" class="card-text"><%= post.timestamp.S %></p>
+							<p id="timestamp" class="card-text"><%= new Date(post.timestamp.S).toUTCString() %></p>
 							<ul id="comments-<%= post.post_id.S %>" style="list-style-type: none" class="mb-2">
 								<% post.comments.SS.forEach(comment => { %>
 									<% if (comment != "default") { %>
