--- a/web/views/chat.ejs
+++ b/web/views/chat.ejs
@@ -16,12 +16,12 @@
 	
 	function sendChat() {
 		const date = new Date(Date.now());
-		const time_sent = ("00" + (date.getMonth() + 1)).slice(-2) + "/" + 
-						("00" + date.getDate()).slice(-2) + "/" + 
+		const time_sent = ("0" + (date.getMonth() + 1)).slice(-2) + "/" + 
+						("0" + date.getDate()).slice(-2) + "/" + 
 						date.getFullYear() + " " + 
-						("00" + date.getHours()).slice(-2) + ":" + 
-						("00" + date.getMinutes()).slice(-2) + ":" + 
-						("00" + date.getSeconds()).slice(-2);
+						("0" + date.getHours()).slice(-2) + ":" + 
+						("0" + date.getMinutes()).slice(-2) + ":" + 
+						("0" + date.getSeconds()).slice(-2);
 		if ($('#input').val().trim() !== '') {
 			$.post('/addMessage', {content: $('#input').val().trim(), sender: $('#username').text(),
 										chat_id: chat_id, time: time_sent}, function (data) {
@@ -53,7 +53,16 @@
 				message_temp.setAttribute("class", "other");
 			}
 			message_temp.appendChild(document.createTextNode(msg.content));
+			var message_sender = document.createElement("li");
+			message_sender.appendChild(document.createTextNode(msg.sender));
+			var message_time = document.createElement("li");
+			message_time.appendChild(document.createTextNode(msg.time));
+			var message_divider = document.createElement("li");
+			message_divider.appendChild(document.createTextNode(" -------------------------------------------------"));
 			$('#messages').append(message_temp);
+			$('#messages').append(message_sender);
+			$('#messages').append(message_time);
+			$('#messages').append(message_divider);
 			$('#messages').animate({
 				scrollTop: $('#messages').get(0).scrollHeight
 			}, 0);
@@ -95,6 +104,7 @@
 					  <li><%= element.content.S %></li>
 					  <li><%= element.sender.S %></li>
 					  <li><%= element.time_sent.S %></li>
+					  <li> -------------------------------------------------</li>
 				  <% }); %>
 			</ul>
 		</div>
