Fix online users

--- a/web/views/createChat.ejs
+++ b/web/views/createChat.ejs
@@ -72,7 +72,7 @@
         <ul>
             <% for (friend of online_friends) {%>
                 <li>
-                    <a href="/profile/<%=friend.login.S%>"><%= friend.login.S%></a>
+                    <a href="/profile/<%=friend%>"><%= friend%></a>
                 </li>
             <% } %>
         </ul>
