--- a/web/views/profile.ejs
+++ b/web/views/profile.ejs
@@ -427,9 +427,7 @@
 						<% } %>
 					</select>
 				</div>
-				
 			</div>
-			
 		</form>
 		<div class="row">
 			<div class="col-sm-2">
@@ -446,6 +444,11 @@
 					<% } %>
 				</ul>
 			</div>
+      <div class="col-sm-2">
+        <form action="/friendvisualizer" method="get" class="form">
+          <button type="submit" class="btn btn-primary" style="white-space: nowrap">See Friend Visualization</button>
+        </form>
+      </div>
 		</div>
 		<h1>
 			Wall
