Fixed friend visualizer

--- a/web/views/friendvisualizer.ejs
+++ b/web/views/friendvisualizer.ejs
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="/css/search.css">
   <link type="text/css" href="/css/visualizer.css" rel="stylesheet" />
   <script src="/js/search.js"></script>
+  <script>var login = '<%= login %>';</script>
   <script language="javascript" type="text/javascript" src="/js/jit.js"></script>
   <script language="javascript" type="text/javascript" src="/js/friendvisualizer.js"></script>
 </head>
